# web

./: README.md  app.py  index_old.html  init_db.py  pyproject.toml
instance/: beer.db
templates/: index.html
